@@ -59,7 +59,7 @@ RspRSourceCode(...)
 
 
  \bold{Methods inherited from RspSourceCode}:\cr
-evaluate, print, rstring, tangle, tidy
+evaluate, print, rfile, rstring, tangle, tidy
 
  \bold{Methods inherited from RspProduct}:\cr
 findProcessor, getMetadata, getType, hasProcessor, print, process, view
