@@ -2,6 +2,7 @@ Package: R.rsp
 ==============
 
 Version: 0.9.10 [2013-07-14]
+o Added rfile() also for RspString, RspDocument and RspRSourceCode.
 o BUG FIX: evaluate() for RspRSourceCode failed to evaluate in to
   proper environment if the default (parent) environment was used.
 
